--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   animated_emoji: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
+  flutter_svg: ^2.0.10+1
+  go_router: ^14.3.0
+  riverpod_annotation: ^2.3.5
   shadcn_ui: ^0.11.0
 
 dev_dependencies:
@@ -19,3 +23,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/img/
