--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   go_router: ^14.3.0
   riverpod_annotation: ^2.3.5
   shadcn_ui: ^0.11.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
