--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,18 @@ environment:
 
 dependencies:
   animated_emoji: ^3.1.0
+  cached_network_image: ^3.4.1
+  file_picker: ^8.1.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   flutter_svg: ^2.0.10+1
   go_router: ^14.3.0
+  path_provider: ^2.1.4
+  permission_handler: ^11.3.1
   riverpod_annotation: ^2.3.5
   shadcn_ui: ^0.11.0
+  supabase_flutter: ^2.8.0
   url_launcher: ^6.3.0
 
 dev_dependencies:
